<resources>
    <string name="app_name">Festi-Friend</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_community">Community</string>
    <string name="title_map">Map</string>
    <string name="title_artists">Artists</string>
    <string name="artist_image">Artists</string>


    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>


    <string name="preview_image">Image Preview</string>
    <string name="select_image">Select Image</string>
    <string name="your_review">Your review...</string>
    <string name="submit_post">Submit Post</string>
    <string name="add_post">Add Post</string>
    <string name="update_post">Update Post</string>
    <string name="festival_image">Festival image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="like">Like</string>
    <string name="festival_updates">Festival Updates</string>
    <string name="live_updates_placeholder">Live updates will be shown here</string>
    <string name="weather_dingle">Weather Dingle</string>
    <string name="forecast_friday_temp">Friday: 9°C</string>
    <string name="forecast_description">overcast clouds</string>
    <string name="forecast_saturday_temp">Saturday: 9°C</string>
    <string name="forecast_sunday_temp">Sunday: 9°C</string>

</resources>