<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ie.wit.festifriend.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="ie.wit.festifriend.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_navigation_schedule_to_artistDetailFragment"
            app:destination="@id/artistDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_community"
        android:name="ie.wit.festifriend.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />
    <fragment
        android:id="@+id/postFragment"
        android:name="ie.wit.festifriend.ui.community.PostFragment"
        android:label="Post"
        tools:layout="@layout/fragment_post">
        <argument
            android:name="post"
            app:argType="ie.wit.festifriend.models.PostModel"
            app:nullable="true" />
    </fragment>
    <action
        android:id="@+id/action_communityFragment_to_postFragment"
        app:destination="@id/postFragment" />

    <fragment
        android:id="@+id/artistDetailFragment"
        android:name="ie.wit.festifriend.ui.detail.ArtistDetailFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/fragment_artist_detail">
        <argument
            android:name="artist"
            app:argType="ie.wit.festifriend.models.ArtistModel"
            app:nullable="true" />
        <action
            android:id="@+id/action_artistDetailFragment_to_navigation_schedule"
            app:destination="@id/navigation_schedule" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ie.wit.festifriend.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

</navigation>